--- a/lib/sqrl/check/web/views/index.erb
+++ b/lib/sqrl/check/web/views/index.erb
@@ -1,17 +1,34 @@
 <html>
   <head>
     <title>SQRL::Check::Web</title>
+    <style>
+      .result .title { font-weight: normal; }
+    </style>
   </head>
   <body>
     <div>
       <h2>About SQRL</h2>
-      <p>SQRL (pronounced squirrel) is a proposed authentication (login) method makes logging in as easy as scannign a QR code, while avoiding most of the pitfalls passwords.</p>
+      <p>SQRL (pronounced squirrel) is a proposed authentication (login) method makes logging in as easy as scanning a QR code, while avoiding most of the pitfalls passwords.</p>
       <ul>
         <li><a href="http://sqrl.pl/">sqrl.pl</a> has some illustrated guides</li>
         <li><a href="https://www.grc.com/sqrl/sqrl.htm">GRC</a> has the provisonal technical details</li>
       </ul>
       <h2>About this test server</h2>
       <p>This service allows you to run a test suite against a publicly accessible SQRL server and view the results online</p>
+      <p><%= results.total_time.round(2) %>s: <%= results.count %> tests, <%= results.failures %> failed, <%= results.errors %> errors, <%= results.skips %> skipped </p>
+      <ul class="results">
+        <% results.results.each do |res| %>
+          <li class="result">
+            <h4 class="title">
+              <em class="class"><%= res.class.name.sub('SQRL::Check::Server::', '') %></em>
+              <strong class="test"><%= res.name.sub('test_', '').tr('_', ' ') %></strong>
+            </h4>
+            <% res.failures.each do |test| %>
+             <pre class="error"><%= Rack::Utils.escape_html(test.to_s) %></pre>
+            <% end %>
+          </li>
+        <% end %>
+      </ul>
     </div>
   </body>
 </html>
