--- a/lib/sqrl/check/web/views/results.erb
+++ b/lib/sqrl/check/web/views/results.erb
@@ -8,16 +8,16 @@
   <body>
     <h2><%= Rack::Utils.escape_html target_url %></h2>
     <div>
-      <p><%= results.total_time.round(2) %>s: <%= results.count %> tests, <%= results.failures %> failed, <%= results.errors %> errors, <%= results.skips %> skipped </p>
+      <p><%= results['total_time'].round(2) %>s: <%= results['count'] %> tests, <%= results['failures'] %> failed, <%= results['errors'] %> errors, <%= results['skips'] %> skipped </p>
       <ul class="results">
-        <% results.results.each do |res| %>
+        <% results['results'].each do |res| %>
           <li class="result">
             <h4 class="title">
-              <em class="class"><%= res.class.name.sub('SQRL::Check::Server::', '') %></em>
-              <strong class="test"><%= res.name.sub('test_', '').tr('_', ' ') %></strong>
+              <em class="class"><%= res['class_name'].sub('SQRL::Check::Server::', '') %></em>
+              <strong class="test"><%= res['name'].sub('test_', '').tr('_', ' ') %></strong>
             </h4>
-            <% res.failures.each do |test| %>
-             <pre class="error"><%= Rack::Utils.escape_html(test.to_s) %></pre>
+            <% res['failures'].each do |test| %>
+             <pre class="error"><%= Rack::Utils.escape_html(test['description']) %></pre>
             <% end %>
           </li>
         <% end %>
