async with sidekiq

--- a/lib/sqrl/check/web/views/index.erb
+++ b/lib/sqrl/check/web/views/index.erb
@@ -12,7 +12,7 @@
       </ul>
       <h2>About this test server</h2>
       <p>This service allows you to run a test suite against a publicly accessible SQRL server and view the results online</p>
-      <form method="get" action="/results">
+      <form method="post" action="/results">
         <div>
           <label for="target_url">
             HTML URL that contains nonced SQRL URL<br/>
