--- a/lib/sqrl/check/web/views/results_waiting.erb
+++ b/lib/sqrl/check/web/views/results_waiting.erb
@@ -7,6 +7,24 @@
   </head>
   <body>
     <h2><%= Rack::Utils.escape_html target_url %></h2>
-    <p>Waiting....</p>
+    <p id="waiting">Waiting.</p>
+    <script>
+      var poll = function() {
+        var req = new XMLHttpRequest()
+        req.onreadystatechange = function() {
+          if (this.readyState == 4) {
+            if (this.status == 204) {
+              location.reload()
+            } else {
+              setTimeout(poll, 1000)
+            }
+          }
+        }
+        req.open("GET", location.pathname + '/poll', true)
+        req.send()
+        document.getElementById('waiting').appendChild(new Text('.'))
+      }
+      poll()
+    </script>
   </body>
 </html>
