answer sqrl queries

--- a/lib/sqrl/check/web/views/index.erb
+++ b/lib/sqrl/check/web/views/index.erb
@@ -4,6 +4,7 @@
   </head>
   <body>
     <div>
+      <a href="<%= auth_url %>"><%= auth_url %></a>
       <h2>About SQRL</h2>
       <p>SQRL (pronounced squirrel) is a proposed authentication (login) method makes logging in as easy as scanning a QR code, while avoiding most of the pitfalls passwords.</p>
       <ul>
