--- a/lib/sqrl/check/web/views/index_logged_out.erb
+++ b/lib/sqrl/check/web/views/index_logged_out.erb
@@ -1,13 +1,17 @@
-<div>
-  <h2>About SQRL</h2>
-  <p>SQRL (pronounced squirrel) is a proposed authentication (login) method makes logging in as easy as scanning a QR code, while avoiding most of the pitfalls passwords.</p>
-  <ul>
-    <li><a href="http://sqrl.pl/">sqrl.pl</a> has some illustrated guides</li>
-    <li><a href="https://www.grc.com/sqrl/sqrl.htm">GRC</a> has the provisonal technical details</li>
-  </ul>
-  <h2>About this test server</h2>
-  <p>This service allows you to run a test suite against a publicly accessible SQRL server and view the results online. In order for this online test to proceed, we must first establish that you have control of the target site.</p>
-  <div>
+<div class="row">
+  <div class="col-md-4">
+    <h2>About SQRL</h2>
+    <p>SQRL (pronounced squirrel) is a proposed authentication (login) method makes logging in as easy as scanning a QR code, while avoiding most of the pitfalls passwords.</p>
+    <ul>
+      <li><a href="http://sqrl.pl/">sqrl.pl</a> has some illustrated guides</li>
+      <li><a href="https://www.grc.com/sqrl/sqrl.htm">GRC</a> has the provisonal technical details</li>
+    </ul>
+  </div>
+  <div class="col-md-4">
+    <h2>About this test server</h2>
+    <p>This service allows you to run a test suite against a publicly accessible SQRL server and view the results online. In order for this online test to proceed, we must first establish that you have control of the target site.</p>
+  </div>
+  <div class="col-md-4">
     <a href="<%= auth_url %>">
     <h2>Login with SQRL to begin</h2>
     <table>
